# icingaweb2

./: .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Makefile.in  README.md  RELEASE.md  Reftest.php  SECURITY.md  VERSION  Vagrantfile  Vagrantfile.parallels  aclocal.m4  changelog.py  composer.json  configure  configure.ac  files  icingaweb.spec  icingaweb2.ruleset.xml  icingaweb2.spec  icingaweb2_php-fpm.spec  install-sh  phpcs.xml  phpstan-baseline-7x.neon  phpstan-baseline-8.0.neon  phpstan-baseline-8.1+.neon  phpstan-baseline-8x.neon  phpstan-baseline-by-php-version.php  phpstan-baseline-standard.neon  phpstan-baseline.neon  phpstan.neon  phpunit.xml  psalm.xml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: L10n-update.yml  docker.yml  php.yml  phpstan.yml  stale.yml
.phan/: config.php
.puppet/: TODO.md
.puppet/hiera/: common.yaml  hiera.yaml
.puppet/manifests/: parallels-upgrade-guest-tools.sh  puppet.sh  site.pp
.tx/: config
.vagrant-puppet/manifests/: default.pp  finalize.sh  successor.pp
application/: GITCOMMIT  VERSION
application/clicommands/: AutocompleteCommand.php  DaemonCommand.php  HelpCommand.php  ModuleCommand.php  SetupCommand.php  TranslationCommand.php  TwofactorCommand.php  VersionCommand.php  WebCommand.php
application/controllers/: AboutController.php  AccountController.php  AnnouncementsController.php  ApplicationStateController.php  AuthenticationController.php  ConfigController.php  ConfigurationController.php  DashboardController.php  DashboardsController.php  ErrorController.php  FilterController.php  GroupController.php  HealthController.php  IframeController.php  IndexController.php  InstallController.php  LayoutController.php  ListController.php  ManageUserDevicesController.php  MigrationsController.php  ModalController.php  ModulesController.php  MyDevicesController.php  NavigationController.php  PermissionsController.php  PreferenceController.php  RoleController.php  RolesController.php  SearchController.php  SecurityController.php  SetupController.php  StaticController.php  TestController.php  TlsclientidentityController.php  TlsrootcacollectionController.php  TryoutController.php  TwoFactorController.php  UmlautController.php  UserController.php  UsergroupbackendController.php
application/fonts/: icingaweb.md
application/forms/: AcknowledgeApplicationStateMessageForm.php  ActionForm.php  AutoRefreshForm.php  Builder.php  ConfigForm.php  ConfirmRemovalForm.php  LdapDiscoveryForm.php  MigrationForm.php  PreferenceForm.php  RepositoryForm.php  TestForm.php
application/locale/: icinga.pot
config/: .gitignore  authentication.ini  authentication.ini.in  backends.ini  backends.ini.in  config.ini  config.ini.in  icinga.ini  memberships.ini  menu.ini  permissions.ini  resources.ini  resources.ini.in  restrictions.ini
config/dashboard/: dashboard.ini
config/enabledModules/: README
config/ldap/: ldap_ca.conf.in  ldap_nocert.conf
config/preferences/: KEEP.md
doc/: 01-About.md  02-Installation.md  03-Configuration.md  04-Resources.md  05-Authentication.md  06-Security.md  07-Preferences.md  08-Modules.md  15-Auditing.md  20-Advanced-Topics.md  60-Hooks.md  70-Troubleshooting.md  80-Upgrading.md  90-SELinux.md  99-Vagrant.md  CONFIG.md  LICENSEHEAD  LIVESTATUS_COLUMNS  about.md  apidoc_creation.md  authentication.md  command.md  components.md  container_component.md  dashboard.md  external_authentication.md  form.md  form_elements.md  graphs.md  installation.md  phpdoc.xml  preferences.md  resources.md  security.md  semantic_search.md  testing.md  vagrant.md  widgets.md
doc/02-Installation.md.d/: 01-Debian.md  02-Ubuntu.md  03-CentOS.md  04-RHEL.md  06-SLES.md  07-Amazon-Linux.md  08-From-Source.md  From-Source.md
doc/Icinga-Design/: documentation.css  documentation.html  icinga-design.css
doc/accessibility/: ifont-mute.html  ifont.html  link-labels.html  required-form-elements.html  skip-content.html  svg.html  text-cue-for-required-form-control-labels.html
doc/module/: configuration_and_preferences.md
doc/res/: Dashboard.graphml  Form.violet
doc/test/: frontend_tests.md  js_tests.md  php_tests.md  running_tests.md  styleguide.md
docs/: ORACLE  README.txt
etc/: license_header.txt
etc/apache/: .gitignore  cranberry.conf  cranberry.conf.in  icingaweb.conf.in
etc/bash_completion.d/: icingacli  icingaweb
etc/config/: authentication_db.ini.in  authentication_ldap.ini.in
etc/schema/: accounts.mysql.sql  accounts.pgsql.sql  dashboards.sql  mysql.schema.sql  mysql.sql  pgsql.schema.sql  pgsql.sql  preferences.mysql.sql  preferences.pgsql.sql  rememberme.schema.sql  users.mysql.sql  users.pgsql.sql
modules/dashboards/: README.md
modules/doc/: configuration.php  module.info  run.php
modules/eventdb/: configuration.php  data  module.info
modules/gravatar/: module.info  run.php
modules/iframe/: moduel.info  module.info
modules/migrate/: module.info
modules/monitoring/: configuration.php  module.info  register.php  run.php
modules/setup/: module.info  run.php
modules/test/: module.info  phpunit.xml
modules/translation/: module.info
pub/: index.php
public/: .gitignore  .htaccess  .htaccess.in  css.php  css.php.in  error_nophp.html  error_noproxyfcgi.html  error_norewrite.html  error_unavailable.html  index.php  index.php.in  js.php.in
public/css/: base.less  bpapp.css  dataviews.less  icinga.less  icons.css  less_rendered.css  main.css  pdfprint.less
public/font/: ifont.eot
public/img/: manifest.json
public/js/: bootstrap.js  bpapp.js  define.js  helpers.js  icinga.js  init.js  logout.js  main-built.js  main.js
public/svg/: chart.php
schema/: mysql.schema.sql  pgsql.schema.sql
schema/mysql-upgrades/: 2.11.0.sql  2.12.0.sql  2.13.0.sql  2.9.0.sql  upgrade-2fa.sql
scripts/: transifex-travis-push  translation-compile  translation-update-pot
test/: INSTALLATION.md  check-syntax.php  setup_vendor.sh  testing.md  travis_database.sh
test/js/: .jshintignore  (+5 more)
(+1268 files in other folders)
